//! Bilibili Provider gRPC Service Implementation

use std::sync::Arc;
use tonic::{Request, Response, Status};

use crate::http::AppState;
use crate::impls::BilibiliApiImpl;
use crate::impls::providers::extract_instance_name;

// Import generated proto types from synctv_proto
use crate::proto::providers::bilibili::bilibili_provider_service_server::BilibiliProviderService;
use crate::proto::providers::bilibili::{ParseRequest, ParseResponse, LoginQrRequest, QrCodeResponse, CheckQrRequest, QrStatusResponse, GetCaptchaRequest, CaptchaResponse, SendSmsRequest, SendSmsResponse, LoginSmsRequest, LoginSmsResponse, UserInfoRequest, UserInfoResponse, LogoutRequest, LogoutResponse};

/// Bilibili Provider gRPC Service
///
/// Thin wrapper that delegates to `BilibiliApiImpl`.
#[derive(Clone)]
pub struct BilibiliProviderGrpcService {
    #[allow(dead_code)]
    app_state: Arc<AppState>,
    api: BilibiliApiImpl,
}

impl BilibiliProviderGrpcService {
    #[must_use]
    pub fn new(app_state: Arc<AppState>) -> Self {
        let api = BilibiliApiImpl::new(app_state.bilibili_provider.clone());
        Self { app_state, api }
    }
}

#[tonic::async_trait]
impl BilibiliProviderService for BilibiliProviderGrpcService {
    async fn parse(&self, request: Request<ParseRequest>) -> Result<Response<ParseResponse>, Status> {
        let req = request.into_inner();
        tracing::info!("gRPC Bilibili parse request: url={}", req.url);
        let instance_name = extract_instance_name(&req.instance_name);

        self.api.parse(req, instance_name.as_deref())
            .await
            .map(Response::new)
            .map_err(Status::internal)
    }

    async fn login_qr(&self, request: Request<LoginQrRequest>) -> Result<Response<QrCodeResponse>, Status> {
        let req = request.into_inner();
        tracing::info!("gRPC Bilibili login QR request");
        let instance_name = extract_instance_name(&req.instance_name);

        self.api.login_qr(req, instance_name.as_deref())
            .await
            .map(Response::new)
            .map_err(Status::internal)
    }

    async fn check_qr(&self, request: Request<CheckQrRequest>) -> Result<Response<QrStatusResponse>, Status> {
        let req = request.into_inner();
        tracing::info!("gRPC Bilibili check QR: {}", req.key);
        let instance_name = extract_instance_name(&req.instance_name);

        self.api.check_qr(req, instance_name.as_deref())
            .await
            .map(Response::new)
            .map_err(Status::internal)
    }

    async fn get_captcha(&self, request: Request<GetCaptchaRequest>) -> Result<Response<CaptchaResponse>, Status> {
        let req = request.into_inner();
        tracing::info!("gRPC Bilibili get captcha request");
        let instance_name = extract_instance_name(&req.instance_name);

        self.api.get_captcha(req, instance_name.as_deref())
            .await
            .map(Response::new)
            .map_err(Status::internal)
    }

    async fn send_sms(&self, request: Request<SendSmsRequest>) -> Result<Response<SendSmsResponse>, Status> {
        let req = request.into_inner();
        tracing::info!("gRPC Bilibili send SMS: phone={}", req.phone);
        let instance_name = extract_instance_name(&req.instance_name);

        self.api.send_sms(req, instance_name.as_deref())
            .await
            .map(Response::new)
            .map_err(Status::internal)
    }

    async fn login_sms(&self, request: Request<LoginSmsRequest>) -> Result<Response<LoginSmsResponse>, Status> {
        let req = request.into_inner();
        tracing::info!("gRPC Bilibili login SMS: phone={}", req.phone);
        let instance_name = extract_instance_name(&req.instance_name);

        self.api.login_sms(req, instance_name.as_deref())
            .await
            .map(Response::new)
            .map_err(Status::internal)
    }

    async fn get_user_info(&self, request: Request<UserInfoRequest>) -> Result<Response<UserInfoResponse>, Status> {
        let req = request.into_inner();
        tracing::info!("gRPC Bilibili user info request");
        let instance_name = extract_instance_name(&req.instance_name);

        self.api.get_user_info(req, instance_name.as_deref())
            .await
            .map(Response::new)
            .map_err(Status::internal)
    }

    async fn logout(&self, request: Request<LogoutRequest>) -> Result<Response<LogoutResponse>, Status> {
        let req = request.into_inner();
        tracing::info!("gRPC Bilibili logout request");

        self.api.logout(req)
            .await
            .map(Response::new)
            .map_err(Status::internal)
    }
}
